# tensorboard-mcp

./: .gitignore  README.md  pyproject.toml  setup.py  tb_mcp.py
tb_mcp_server/: __init__.py  __main__.py  server.py
tensorboard_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
